main.css
:root {
    --main-color: #392d59;
    --text-color: white;
    --accenting: #b9bdd1;
}

html {
    overflow: scroll;
}

body {
    background-color:var(--accenting);
    height: 100%;
    width: 100%;
    padding: 0;
    z-index: -1;
}

#nav {
    max-width: 100vw;
    height: 60px;
    position: relative;
    background-color: var(--main-color);
    display: flex;
}

#Title {
    color: var(--text-color);
    top: 5px;
    font-size: 25px;
    position: relative;
    display: block;
    align-self: center;
    margin-left: 20px;
    z-index: 7;
}

#icon-div {
    display: none;
}

.read-book-icon {
    height: 35px;
    width: auto;
    position: relative;
    left: 10px;
    align-self: center;
    z-index: 5;
    filter: invert();
}

#cover-div-book-search {
    position: absolute;
    margin-left: 274px;
    background-color: var(--main-color);
    width: 250px;
    border-radius: 10px;
    top: 20px;
    height: 20px;
    z-index: 3;
}

#cover-div-book-search2 {
    position: absolute;
    margin-left: 274px;
    background-color: var(--main-color);
    width: 250px;
    display: none;
    border-radius: 10px;
    top: 20px;
    height: 20px;
    z-index: 3;
}

#search-icon {
    position: relative;
    display: block;
    height: 30px;
    width: auto;
    filter: invert();
    z-index: 4;
    left: 35px;
    align-self: center;
}

.animatedCover {
    animation: searchCoverSlide ease-in .7s forwards;
}

.animatedCoverUp {
    animation: searchCoverUp ease-in .7s forwards;
}


@keyframes searchCoverSlide {
    100% {
        transform:translateX(-98%);
    }
}

@keyframes searchCoverUp {
    0% {
        transform:translateX(-98%);
    }
}

#book-search-input {
    position: absolute;
    display: block;
    height: 20px;
    width: auto;
    z-index: 2;
    top: 20px;
    left: 280px;
    border-radius: 10px;
}

#book-search-input2 {
    display: none;
}

.end-nav-bar-items {
    margin-left: auto;
    margin-right: 10px;
    width: 292px;
    display: flex;
    position: relative;
}

#plus-icon {
    height: 20px;
    width: auto;
    position: relative;
    display: block;
    align-self: center;
    filter: invert();
}

.person-profile {
    height: 30px;
    width: auto;
    left: 20px;
    position: relative;
    display: block;
    align-self: center;
    filter: invert();
}

#new-book-title {
    font-size: 20px;
    position: relative;
    display: block;
    align-self: center;
    top: 3px;
    left: 4px;
    filter: invert();
}

#account-title {
    font-size: 20px;
    position: relative;
    display: block;
    align-self: center;
    top: 3px;
    left: 25px;
    filter: invert();
}

#options {
    height: 20px;
    width: auto;
    left: 45px;
    position: relative;
    align-self: center;
    z-index: 6;
    filter: invert();
}

#book-container {
    display: grid;
    position: relative;
    margin: auto;
    margin-top: 15px;
    justify-content: center;
    width: 95%;
    grid-template-columns: repeat(auto-fill, 175px);
    grid-template-rows: repeat(auto-fill, 280px);
    grid-auto-flow: row;
    gap: 20px 10px;
}

.book-hover-all {
    position: absolute;
    z-index: 71;
    opacity: 0;
    transition: opacity .5s;
}

.hover:hover {
    opacity: 1;
}

#star {
    z-index: 72;
    position: absolute;
    top: 10px;
    left: 10px;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

#tag {
    z-index: 72;
    position: absolute;
    top: 10px;
    left: 115px;
    width: 30px;
    height: 30px;
    cursor: pointer;
}



#edit-book {
    height: 25px;
    left: 10px;
    top: 238px;
    line-height: 12px;
    color: white;
    background-color: rgb(39, 39, 136);
    border-color: rgb(25, 25, 128);
}

#delete-book {
    height: 25px;
    left: 52px;
    top: 238px;
    line-height: 10px;
    font-size: 30px;
    color: white;
    background-color: rgb(136, 39, 39);
    border-color: rgb(128, 25, 25);
}

.book-hover-all > button {
    position: absolute;
    z-index: 72;
    display: inline-block;
    border-radius: 5px;
}

#book-hover-overlay {
    height: 275px;
    width: 155px;
    background-color: rgb(90, 1, 86);
    border-radius: 10px;
    opacity: .3;
    display: block;
    position: absolute;
}

.book-covers {
    position: relative;
    height: 275px;
    width: 155px;
    border-radius: 10px;
    background-color: rgb(68, 61, 36);
    z-index: 31;
}

#book-build {
    display: none;
    margin-top: 20px;
}

.newBook {
    display: block;
    height: 280px;
    width: 180px;
}

.pages-div {
    left: 5px;
    width: 158px;
    border-radius: 50px 20px 10px 10px;
    bottom: 270px;
    z-index: 30;
}

.back-cover {
    left: 0px;
    bottom: 540px;
    border-radius: 0px 10px 10px 5px;
    width: 170px;
    z-index: 29;
}

.book-div {
    margin-top: 30px;
    margin-left: 20px;
    margin-right: 20px;
    display: inline-block;
    height: 275px;
    width: 150px;
    border-radius: 10px;
    background-color: rgb(68, 61, 36);
}

.book-titles {
    font-size: 27px;
    display: block;
    position: relative;
    top: 25%;
    text-align: center;
    color: var(--text-color)
}

#footer {
    position: fixed;
    display: block;
    width: 100vw;
    background-color: #1d1435;
    bottom: 0;
    z-index: 70;
    height: 20px;
}

#new-book-ui {
    display: none;
    margin: auto;
    position: absolute;
    top: 0; left: 0; bottom: 0; right: 0;
    height: 500px;
    width: 250px;
    z-index: 100;
    border-radius: 20px;
    background-color: var(--main-color);
}

#text-inputs {
    position: relative;
    display: flex;
    flex-direction: column;
}

#text-inputs > input {
    margin: auto;
    margin-top: 30px;
    text-indent: 10px;
    border-radius: 10px;
    border: none;
    width: 90%;
}

#pages-total-title {
    display: block;
    position: relative;
    text-align: center;
    margin-left: 14px;
    margin-top: 10px;
    margin-bottom: 0;
    width: 60%;
    font-size: 18px;
}

#pagesTotal {
    display: block;
    position: relative;
    margin-top: 11px;
    width: 20%;
    text-align: center;
    font-size: 18px;
}

#pages-read-title {
    display: block;
    position: relative;
    text-align: center;
    margin-left: 15px;
    width: 60%;
    font-size: 18px;
}

#pagesRead {
    display: block;
    position: relative;
    margin-top: 1px;
    width: 20%;
    text-align: center;
    font-size: 18px;
}

.pages-Titles-Div {
    display: flex;
    flex-direction: column;
    position: relative;
    border-radius: 10px;
    top: 10px;
    width: 80%;
    background-color: #180e33;
    margin: auto;
}

.pRContainer {
    display: flex;
    flex-direction: row;
    color: var(--text-color);
}

#pages-read-range {
    appearance: none;
    background-color: rgb(37, 32, 54);
    display: block;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    height: 30px;
    padding: 10px;
    position: relative;
    border-radius: 10px;
}

.slider::-webkit-slider-thumb, .slider::-moz-range-thumb {
    appearance: none !important;
    border: none;
    border-radius: 0;
    margin-left: 20px;
    height: 16px;
    width: 8.63px;
    background: url('bookmarkflag-01.svg');
}

  /* FF */
  input[type="range"]::-moz-range-progress {
    background-color: #43c9c2; 
  }
  input[type="range"]::-moz-range-track {  
    background-color: #ffffff;
  }
  /* IE*/
  input[type="range"]::-ms-fill-lower {
    background-color: #43c9c2; 
  }
  input[type="range"]::-ms-fill-upper {  
    background-color: #ffffff;
  }

.uploadContainer {
    display: block;
    margin: auto;
    margin-bottom: 30px;
    margin-top: -17px;
    gap: 10px;
    width: 200px;
    flex-direction: row;
}

#upload-btn {
    position: absolute;
    left: 20%;
    height: 30px;
    text-align: center;
    background-color: rgb(37, 32, 54);
    color: var(--text-color);
    font-size: 13px;
    border-color: #f78cca;
    border-radius: 10px;
    width: 150px;
}

#img-upload {
    position: absolute;
    opacity: 0;
    left: 20%;
}

#img-div {
    display: block;
    position: relative;
    margin: auto;
    margin-bottom: 10px;
    margin-top: 10px;
    bottom: 15px;
    height: 55px;
    width: 40px;
    border-radius: 5px;
    background-color: rgb(250, 241, 193);
    font-size: 9px;
    text-align: center;
    line-height: 15px;
}

#done-btn {
    margin: auto;
    display: block;
    position: absolute;
    background-color: #f78cca;
    left: 0; right: 0;
    bottom: 10px;
    color: #380c49;
    border-color:var(--main-color);
    border-radius: 10px;
    width: 200px;
}

#overlay {
    display: none;
    position: absolute;
    background-color: black;
    opacity: .4;
    height: 100%;
    width: 100%;
    z-index: 99;
}

@media (max-width: 825px) {
    #nav {
        flex-flow: column;
        height: 145px;
    }
    #Title {
        margin: auto;
    }
    .read-book-icon {
        display: none;
    }
    #search-icon {
        display: none;
    }
    #book-search-input {
        display: none;
    }
    #icon-div {
        margin: auto;
        position: relative;
        display: flex;
        align-self: center;
        z-index: 20;
    }
    
    .animateIcons {
        animation: iconSlide .7s forwards ease-in;
    }

    .animateIconsBack {
        animation: iconSlideBack .7s forwards ease-in;
    }

    @keyframes iconSlide {
        100% {
            transform: translateX(-143%);
        }
    }

    @keyframes iconSlideBack {
        0% {
            transform: translateX(-143%);
        }
        100% {
            transform: translateX(0%);
        }
    }

    #read-book-icon2 {
        margin: inherit;
        display: block;
        filter: invert();
        height: 35px;
        width: auto;
        z-index: 5;
    }
    #search-icon2 {
        position: relative;
        margin: auto;
        margin-left: 10px;
        display: block;
        height: 30px;
        filter: invert();
        z-index: 4;
        width: auto;
    }
    #book-search-input2 {
        position: absolute;
        display: block;
        height: 20px;
        width: 200px;
        z-index: 2;
        top: 64px;
        left: 40%;
        border-radius: 10px;
        
    }
    #cover-div-book-search {
        display: none;
    }

    #cover-div-book-search2 {
        position: absolute;
        bottom: 17px;
        width: 260px;
        display: block;
        background-color: var(--main-color);
        left: 39%;
        z-index: 3;
        margin: auto;
    }
    .end-nav-bar-items {
        margin: auto;
        bottom: 5px;
    }
}

